--- a/view1.css
+++ b/view1.css
@@ -72,7 +72,7 @@ body {
   font-style: italic;
   font-weight: lighter;
   color: rgba(197, 155, 155, 0.6);
-  font-size: 0.58em;
+  font-size: 0.7em;
   margin-left: 5px;
   position: relative;
   bottom: 1px;
@@ -208,21 +208,12 @@ body {
   z-index: 2;
 }
 
-/*Action buttons at base of window for testing purposes*/
-#base-buttons {
-  position: fixed;
-  bottom: 5px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 5;
-}
-
 .inline-blocks-wrapper {
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-around;
   padding: 10px 5px;
   /*overflow-x: scroll;*/
 }
@@ -239,8 +230,8 @@ video:focus {
 }
 
 .video-card {
-  width: 35.6vh;
-  height: 40vh;
+  width: 35vh;
+  height: 35vh;
   position: relative;
   border-radius: 10px;
   background-color: rgb(50, 50, 50);
@@ -249,8 +240,8 @@ video:focus {
 }
 
 .video-card > div {
-  position: absolute;
-  bottom: 10px;
+  /*position: absolute;
+  bottom: 10px;*/
   overflow: hidden;
 
   transition: all .5s linear;
@@ -260,12 +251,23 @@ video:focus {
   box-shadow: 1px -4px 5px 1px rgba(0, 0, 0, 0.212), -1px -3px 5px 1px rgba(0, 0, 0, 0.178);
   border-radius: 10px 10px 0 0;
   width: 100%;
-  height: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  height: 60%;
+  margin-bottom: 10px;
   background-color: black;
   transition: all .5s linear .1s; /*Property Duration Timing-function Delay.*/
+}
+
+.thumbnail+img {
+  display: block;
+  position: absolute;
+  top: 30%; /*Half of thumbnail's height.*/
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  z-index: 2;
+  opacity: .7;
+  pointer-events: none;
 }
 
 .w3-panel {
@@ -279,7 +281,7 @@ video:focus {
 
 .video-group {
   width: 100%;
-  padding: 15px 0;
+  padding: 4vh 0;
   overflow-x: hidden;
 }
 
